[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["CoreyDeJong <dejongcorey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.4"
pandas = "^1.0.4"
sklearn = "^0.0"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
